sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '(' expected but identifier found.
      if plusPetit(nombre,c){
         ^AlgBubbleSort1:15: error: illegal start of simple expression
    }
    ^